fix scss to suit to specifications: adjust spacing between messages

--- a/app/assets/stylesheets/module/_messages.scss
+++ b/app/assets/stylesheets/module/_messages.scss
@@ -106,11 +106,11 @@
       flex-grow: 1;
       background-color: #fafafa;
       border: 1px solid #eeeeee;
-      padding: 0 $chat_block_padding_length;
+      padding: 46px $chat_block_padding_length 0;
       overflow: scroll;
       @include hide_scrollbar;
       &__message {
-        padding-top: 46px;
+        padding-bottom: 40px;
         &__info {
           margin-bottom: 10px;
           display: flex;
